--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 html {
     scroll-behavior: smooth;
-    box-sizing: border-box;
     background-color: #E9E1E5;
     font-family: 'DMMono';
 }
@@ -8,6 +7,19 @@ html {
 html, body {
   height: 100%;
   margin: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 p {
@@ -26,9 +38,10 @@ p {
     align-items: center;
     flex-direction: column;
     height: 100vh;
+    margin-top: 35rem;
 }
 
-.knowledge {
+.section {
     display: flex;
     flex-direction: column;
 }
@@ -51,11 +64,25 @@ p {
     transform: translate(-50%, -50%); /* centers the eye */
 }
 
-.skillTitle{
+.subTitle{
     font-weight: 700;
+    margin-bottom: 0.3rem;
 }
 
-.skill {
+.subText {
     font-size: 0.8rem;
-    padding-bottom: 0.6rem;
+    margin-bottom: 0.8rem;
+    max-width: 88vw;
+}
+
+.preview{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gif {
+    max-width: 65vw; 
+    margin-top: 1rem;
+    filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 1));
 }
