--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ p {
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    margin-top: 35rem;
+    margin-top: 60rem;
 }
 
 .section {
@@ -66,7 +66,7 @@ p {
 
 .subTitle{
     font-weight: 700;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.5rem;
 }
 
 .subText {
@@ -79,10 +79,37 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s ease;
 }
 
-.gif {
-    max-width: 65vw; 
+.preview-button:hover + .preview {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+
+.gif { 
     margin-top: 1rem;
+    margin-bottom: 2rem;
     filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 1));
+}
+
+button {
+    padding: 0.2rem;
+    font-family: 'DMMono';
+    font-size: 0.7rem;
+    max-width: 5rem;
+    background-color: #000000;
+    color: #E9E1E5;
+    border: 1px solid #000000;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+button:hover {
+    background-color: #E9E1E5;
+    color: #000000;
 }
