--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,11 @@ body::-webkit-scrollbar {
 
 p {
     margin: 0;
-    font-size: 1rem;
+    font-size: 0.7rem;
+}
+
+h1 {
+    font-size: 1.5rem;
 }
 
 @font-face {
@@ -65,6 +69,7 @@ p {
 }
 
 .subTitle{
+    font-size: 0.8rem;
     font-weight: 700;
     margin-bottom: 0.5rem;
 }
