--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 body::-webkit-scrollbar {
@@ -41,7 +43,7 @@ h1 {
     align-items: center;
     flex-direction: column;
 
-    margin-top: 12rem;
+    margin-top: 8rem;
 }
 
 .section {
@@ -51,20 +53,23 @@ h1 {
 
 .kittyface {
     position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo {
+    width: 75%;
     display: block;
-    width: 45vw;
 }
 
 .eye {
     position: absolute;
-    width: 8vw;
+    width: 14%;
     top: 55%;
     left: 50%;
-    transform: translate(-50%, -50%); /* centers the eye */
+    transform: translate(-50%, -50%);
+    pointer-events: none;
 }
 
 .subTitle{
